# evo-situations

./: README.md  readme-ru.md  readme.md
containers/: CMakeLists.txt
containers/examples/ppvector-figures/: CMakeLists.txt  ppvector-figures.c
containers/examples/ppvector-sum-double/: CMakeLists.txt  ppvector-sum-double.c
containers/examples/ppvector-sum-int/: CMakeLists.txt  ppvector-sum-int.c
containers/examples/ppvector-sum-int-ptr/: CMakeLists.txt  ppvector-sum-int-ptr.c
containers/src/examples/pp-vector-sum-double/: CMakeLists.txt  pp-vector-sum-double.c
containers/src/examples/pp-vector-sum-int/: CMakeLists.txt  pp-vector-sum-int.c
containers/src/include/: pp-vector.h  pplist.h  ppstring.h
containers/src/include/pplist/: data.h  general.h  interface.h  macro.h
containers/src/include/ppstring/: data.h  interface.h
containers/src/include/ppvector/: general.h
containers/src/pp-vector/: CMakeLists.txt  pp-vector.c
containers/src/pplist/: CMakeLists.txt  ppgeneral.c  pplist.c
containers/src/ppvector/: ppgeneral.c
containers/src/tests/pp-vector-common/: CMakeLists.txt  test-pp-vector-common.c
containers/tests/pplist-common/: CMakeLists.txt  test-pplist-common.c
containers/tests/ppvector-common/: CMakeLists.txt  test-ppvector-common.c
other/animals-reuse/02-swimming-dog/: CMakeLists.txt
other/animals-reuse/04-eating/: CMakeLists.txt
other/animals-reuse/05-groups/: CMakeLists.txt
other/animals-reuse/07-mosquito/: CMakeLists.txt  main.ppc
other/animals/01-start/pp/: CMakeLists.txt  animals.c  animals.h  main.c
other/animals/01-start/ppp/: CMakeLists.txt  animals.pph
other/e-life/e-life-ppc-threads/src/: CMakeLists.txt
other/e-life/e-life-ppc/src/: CMakeLists.txt  entity.ppc
other/libcontainers/: CMakeLists.txt  README.md
other/libcontainers/doc/: README.md
other/libcontainers/doc/containers/: array.md  hashset.md  list.md  stack.md  vector.md
other/libcontainers/doc/values/: string.md
other/libcontainers/src/container/: ppcontainer.c  ppcontainer.h
other/libcontainers/src/hashmap/: pphashmap-container.c  pphashmap.c  pphashmap.h
other/libcontainers/src/hashset/: pphashset-container.c
other/libcontainers/src/int/: ppint-value.c  ppint.h
other/libcontainers/src/list/: pplist-container.c  pplist.c
other/libcontainers/src/stack/: ppstack.h
other/libcontainers/src/string/: ppstring-value.c  ppstring.c  ppstring.h
other/libcontainers/src/value/: ppvalue.c
other/libcontainers/src/vector/: ppvector-container.c  ppvector.h
other/libcontainers/tests/: CMakeLists.txt  test-array.c  test-stack.c  test-vector.c
other/libraries/base/array-type/: CMakeLists.txt  array.c  array.h  main.c
other/libraries/test-shared/: CMakeLists.txt
other/libraries/test-shared/AppDirectory/: CMakeLists.txt  main.c
other/libraries/test-shared/LibDirectory/: CMakeLists.txt  library.c  library.h
other/obects-only-using/02-objects-are-all-types/: CMakeLists.txt  figures-input.c  main.c  objects.c  objects.h  parent.h
other/obects-only-using/02-objects-are-all-types/data/: output1.txt
other/solid/srp/02-oop-srp/: CMakeLists.txt  client-draw.cpp  client-draw.h  client-geometry.cpp  client-geometry.h  container.cpp  container.h  figure.h  main.cpp  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
other/solid/srp/03-ppp-srp/: CMakeLists.txt  container-area-out.c  container-perimeter-out.c  drawing-client.h  figure-perimeter.c  figure-rectangle-area.c  figure-triangle-area.c  figures-input.c  geometry-client.c  geometry-client.h  rectangle-perimeter.c
other/standart-containers/: CMakeLists.txt  README.md
other/standart-containers/array/: array-container.c  array.c  array.h
other/standart-containers/container/: container.c  container.h
other/standart-containers/hashset/: hashset-container.c  hashset.c  hashset.h
other/standart-containers/list/: list-container.c  list.c  list.h
other/standart-containers/stack/: stack-container.c  stack.c  stack.h
other/standart-containers/tests/array/: CMakeLists.txt  main.c
other/standart-containers/tests/hash-set/: CMakeLists.txt  main.c
other/standart-containers/tests/list/: CMakeLists.txt  main.c
other/standart-containers/tests/stack/: CMakeLists.txt  main.c
other/standart-containers/tests/vector/: CMakeLists.txt  main.c
other/standart-containers/value/: value.c  value.h
other/standart-containers/vector/: vector-container.c  vector.c  vector.h
other/untyped/: CMakeLists.txt  main.c  readme.md  word32-spec.c  word32-spec.h  word32.c  word32.h
other/use-ppc-extension/thread-rect-perimeter-ppc-extension-prj/: CMakeLists.txt  ppp-thread.c  rectangle-thread.c
other/vector-tag/: CMakeLists.txt  main.c  vector.c  vector.h
problems/tree-c/: .kateproject.build  CMakeLists.txt  main.c  nametable.c  pair.c  pair.h  tree.c  tree.h
technics/elementary-patterns/extend-method/: CMakeLists.txt  figure-rectangle.c  figure-rectangle.h  figure-triangle.h  figure.c  figures-input.c  main.c
technics/elementary-patterns/extend-method/oop/: CMakeLists.txt  figure.cpp  figure.h  figures-input.cpp  main.cpp  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
technics/elementary-patterns/extend-method/ppp/: figure-triangle.c  figure.h  rectangle.c  triangle.h
technics/enums/enum-02/: CMakeLists.txt  main.ppc
technics/interfaces/c-style/: CMakeLists.txt  figure.h  figures-input.c  geometry-rectangle.c  geometry-rectangle.h  geometry-triangle.c  geometry-triangle.h  geometry.c  geometry.h  inout-rectangle.c  inout-rectangle.h  inout-triangle.c  inout-triangle.h  inout.c  inout.h  main.c  rectangle.h
tmp/old/ppclang-mm-direct-numbers-base-tag/: CMakeLists.txt  double.c  double.h  int.c  int.h  main.c  minus.c
tmp/old/proc-start-shapes/: CMakeLists.txt  container_Area.cpp  container_Constr.cpp  container_In.cpp  container_Out.cpp  container_atd.h  main.cpp  rectangle_Area.cpp  rectangle_Constr.cpp  rectangle_In.cpp  rectangle_Out.cpp  shape_Area.cpp  shape_Constr.cpp  shape_In.cpp  shape_Out.cpp  triangle_Area.cpp  triangle_Constr.cpp  triangle_In.cpp  triangle_Out.cpp
(+1621 files in other folders)
